--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 *{
     margin: 0;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main{
     display: flex;
+    gap: 20px;
+    background-color: #f2f2f2;
 }
 
 .sidebar{
@@ -20,7 +22,7 @@
     color: #fff;
 }
 
-.sidebar .hero{
+.sidebar .odin{
     background-color: #00000071;
     width: 100%;
     color: #fff;
@@ -30,10 +32,9 @@
     justify-content: center;
     align-items: center;
     font-size: 3.2em;
-    font-family: Norse;
 }
 
-.sidebar .hero img{
+.sidebar .odin img{
     width: 60px;
     height: 60px;
 }
@@ -46,52 +47,49 @@
     display: flex;
     flex-direction: column;
     width: 70vw;
-    height: 100vh;
-    padding: 20px;
     justify-content: center;
     gap: 60px;
-    background-color: #f3f0f0;
 }
 
 .landing .message{
-    font-size: 1.4em;
+    font-size: 1.2em;
     font-weight: bold;
     width: 100%;
 }
 
-.form-section{
-    background-color: #fff;
-    margin: 0;
-    padding: 10px;
-    width: 100%;
-    box-shadow: #fff;
-}
-
-.signup-form{
+.form-row{
     display: flex;
     justify-content: space-between;
-    width: 80%;
+    margin-bottom: 15px;
+}
+
+.column{
+    width: 45%;
+}
+
+.form-fields{
+    background-color: #fff;
+    padding: 10px;
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
+    margin-bottom: 50px;
 }
 
 label{
     text-transform: uppercase;
+    display: block;
 }
 
-.submit-section{
-    gap: 10px;
+input{
+    width: 80%;
+    padding: 4px;
+    border: 1px solid #E5E7EB;
+    box-sizing: border-box;
 }
 
 button{
     background-color: #596D48;
     color: #fff;
     padding: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
     margin-bottom: 30px;
-}
-
-input{
-    width: 100%;
-    padding: 4px;
-    border: 1px solid #E5E7EB;
+    border-radius: 10px;
 }
